k8s/testlab/gollum/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gollum-pod-debug
  namespace: gollum
spec:
  securityContext:
    runAsNonRoot: false
    runAsUser: 999
    runAsGroup: 999
    fsGroup: 999
    fsGroupChangePolicy: OnRootMismatch
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: gollum
      image: gollumwiki/gollum:latest
      command: [ "/bin/sh", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop: [ "ALL" ]
      volumeMounts:
        - name: gollum-repo
          mountPath: /wiki
  restartPolicy: OnFailure
  volumes:
    - name: gollum-repo
      persistentVolumeClaim:
        claimName: pvc-gollum
