k8s/testlab/gollum/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gollum
  namespace: gollum
spec:
  selector:
    app: gollum
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
