k8s/testlab/gollum/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gollum-internal
  namespace: gollum
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - emisia.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wiki
      backendRefs:
        - name: gollum
          port: 80
